index.hbs finished, aboutUs.hbs finished

--- a/functions/views/index.hbs
+++ b/functions/views/index.hbs
@@ -14,124 +14,154 @@
 </div>
 
 <!-- after landing page -->
-<div class="container" id="pt2">
-    <div class="row resourceH">
-        <p data-aos="fade-in">We Provide The Resources...</p>
+<div class="container  mt-5 pt-3" id="pt2">
+    <div class="row">
+        <div class="col-sm-12">
+            <p class="header">We're An Online Cloud Manager</p>
+        </div>
     </div>
-    <div class="row justify-content-end">
-
-        <p class="para2" data-aos="fade-left" data-aos-delay="20"> .. to stay organised</p>
-
+    <div class="row pt-0 mt-0">
+        <div class="col-sm-12">
+            <span class="subtext"> We Work Hard So You Don't Have To</span>
+        </div>
     </div>
-    <div class="row justify-content-end">
-
-        <p class="para3" data-aos="fade-left" data-aos-delay="100"> .. to conquer tasks</p>
-
+    <div class="row pt-5 pb-5 mt-5">
+        <div class="col-sm">
+            <p class="introTxt">Our cloud manager will help you
+                get organised,<br>
+                stay organised, 
+                and most importantly,<br>
+                Never stress about where your
+                information is. </p>
+        </div>
+        <div class="col-sm imgSec">
+            <img src="/images/img1_D.png">
+        </div>
     </div>
-
 </div>
-<!----- After Landing page End ---------->
-<!-- cloud image --->
-<img class="cloudIMG" src="/images/clouds.svg">
+<!--- - - After Landing page End - - - - - - - - -->
+
 
 <!--- GRey Section--->
 <div class="container-fluid greySec text-center mt-5">
     <div class="row justify-content-center pt-5 mb-5">
-        <p class="exTxt_1">There comes a time when you need to access files from the mysterious cloud.<br> A handful of time is spent transfering, deleting, organising and re-organising.
+        <p class="exTxt_1">There comes a time when you need to access files from the mysterious cloud.<br> A handful of time is spent transferring, deleting, organising and re-organising.
             <br><br> Organisation Doesn't come easy. <br> With our cloud service we help you manage the cloud services in one go.<br>
             <br> Whatever you need to do. We will help you.<br></p>
 
     </div>
-    <div class="row">
-        <div class="col-sm-6 transferTxt movementTxt">
-            <p data-aos="fade-down">Transfer Files.</p>
-        </div>
-        <div class="col-sm-6 deleteTxt movementTxt">
-            <p data-aos="fade-up">Delete Files.</p>
-        </div>
-    </div>
-    <div class="row createNameTxt movementTxt mt-5">
+    <div class="row createNameTxt mt-5">
         <div class="col-12">
-            <p class="animated infinite bounce">Create.Name.Save</p>
-        </div>
-    </div>
-    <div class="row mt-5">
-        <div class="col-12 signUp_1">
-            <p> We work hard so you don't have to.</p>
+            <p class="animated infinite bounce">
+                <span class="transfer">Transfer</span>
+                <span class="fullStop">.</span>
+                <span class="delete">Delete</span>
+                <span class="fullStop">.</span>
+                <span class="save">Save</span>
+                <span class="fullStop">.</span>
+                </p>
         </div>
     </div>
 </div>
 <!--- end of grey section --->
 
-<!-- Think Big Section ----->
-
-<div class="container-fluid text-center" id="thinkBig">
-    <div class="row justify-content-center">
-
-        <p class="thinkBigTXT_1">
-            Before storage was a big problem.<br><br> <span id="nowTxt">Now it is not!</span><br> But that means that it's easy to get caught up in all the<br> <span id="bigDataTxt">BIG DATA.</span><br> But not with us....<br><br> With us it's easy to keep track of all the files that you may have.<br></p>
-
+<!-- Statistics section + Button Section -->
+<div class="container statisticsIconSection pt-5 mt-5">
+    <div class="row">
+        <div class="col-sm-4 piechartIcon">
+            <img src="/images/img2_DM.png">
+        </div>
+        <div class="col-sm-4 barchartIcon">
+            <img src="/images/img3_DM.png">
+        </div>
+        <div class="col-sm-4 timeClockIcon">
+            <img src="/images/img4_DM.png">
+        </div>
     </div>
-    <div class="row justify-content-center">
-
-        <p id="thinkBigTXT_2">
-            <span id="and">&amp;</span><br>You're just a few clicks away from, a stress-free <br> and <span class="organise" data-aos="fade-in" data-aos-anchor-placement="bottom-bottom"> ORGANISED</span> life.</p>
-
-    </div>
-    <!--- Button section ----->
-    <div class="row justify-content-center signUp_1 mt-3">
-        <p class="topBtn"> Convinced Yet?</p>
-    </div>
-    <div class="row justify-content-center mt-0">
-
-        <button type="button" onclick="location.href='/users/register';" class=" btn btn-dark btn-lg mt-0" class="btn btn-dark">Sign Up</button>
-    </div>
-    <div class="row justify-content-center ">
-        <p class="bottomBtn"> No installation Required!</p>
-    </div>
-
-
 </div>
-<!----- Think Big Section END---------->
 
-<!--- keep-Organised section ------->
-
-<div class="container pt-5">
-    <div class="row">
+<div class="container statisticsTextSection  pt-5">
+    <div class="row ">
         <div class="col-sm-12">
-            <p class="organisedHdr"> Get Organised..</p>
+            <p class="pinkTxt"> View all your files from one location</p>
         </div>
     </div>
-    <div class="row">
+    <div class="row mt-2">
         <div class="col-sm-12">
-            <img src="/images/Float_D.png" class="floatIMG img-fluid mx-auto d-block"></div>
-    </div>
-    <div class="row">
-        <div class="col-12">
-            <p class="organisedTxt"> Stay Organised </p>
+            <p class="blueTxt"> Hassle Free</p>
         </div>
     </div>
-    <div class="row">
-        <div class="col-12">
-            <p class="wuTxt" data-aos="fade-up"> WITH US </p>
-        </div>
+    <div class=" row mt-5 d-flex justify-content-center FileExplationTxt">
+        <p> From PDFs, Spreadsheets, to PNG and SVGs. <br> You can access it all here.<br><br>
+        Need to transfer on folder to another cloud? <br> It's easy with us.</p>
     </div>
 </div>
 
 <!--- Button Section --->
-<div class="row justify-content-center signUp_1">
-    <p class="topBtn"> Still Reading This? Sign Up Today</p>
+<div class="row justify-content-center signUp_1 mt-5">
+    <p class="topBtn"> Get Started Today</p>
 </div>
 <div class="row justify-content-center">
-    <button type="button" onclick="location.href='/users/register';" class="btn btn-dark btn-lg">Sign Up</button>
+    <button type="button" onclick="location.href='/users/register';" class="signBtn">Sign Up</button>
 
 </div>
+<div class="row justify-content-center">
+    <p class="bottomBtn"> For Free</p>
+</div>
 <!--- Butten section END --->
-<!--- keep-Organised section END ------->
 
-<!--- Resource Section------------->
-<!-- section contain cloud services we handle ----->
-<div class="container-fluid mt-5 greySec text-center">
-    <h1> Resources...</h1>
-    <h5> We our always updating the list of services that we provide.</h5>
+
+<!-- END OF Statistics Section -->
+
+<!--- - - Grey SEction pt2 - - - --->
+<div class="container-fluid greySec text-center mt-5">
+    <div class="row justify-content-center pt-5 mb-5">
+        <p class="exTxt_1">Before storage was a big problem <br><br>
+        <span class="biggerTxtp">Now it is not!</span>
+        <br>
+        But that means that it's easy to get caught up in all the <br>
+        <span class="bigPinkTxt">BIG DATA.</span>
+        <br>
+        But not with us... <br>
+        With us it's easy to keep track of all the files that you may have.<br>
+        <span class="and">&amp</span><br>
+        You're just a few clicks away from a stess-free<br> and 
+        <span class="pinkTxt"> ORGANISED</span> life.</p>
+
+    </div>
+</div>
+
+<!--- Button Section --->
+<div class="row justify-content-center signUp_1 pt-5 mt-5">
+    <p class="topBtn">Convinced Yet?</p>
+</div>
+<div class="row justify-content-center">
+    <button type="button" onclick="location.href='/users/register';" class="signBtn">Sign Up</button>
+
+</div>
+<div class="row justify-content-center">
+    <p class="bottomBtn">No Installation Required! </p>
+</div>
+<!--- Butten section END --->
+
+
+<!-- - - -  Grey SEction pt2 END- - - - -->
+
+<br><br><br><br>
+
+<!--- - - - - - Resource Section  - - - - - -  --->
+<!-- section contain cloud services we handle  --->
+<div class="container mt-5 resourceSection mt-5 mb-5 pb-5">
+    <header class="pb-4"> Resources...</header>
+    <div class="row pt-5">
+        <div class="col-sm-4 onedriveIcon mb-4">
+            <img src="/images/img5_Dm.png">
+        </div>
+        <div class="col-sm-4 googleIcon mt-4 mb-4">
+            <img src="/images/img6_Dm.png">
+        </div>
+        <div class="col-sm-4 dropboxIcon mt-4">
+            <img src="/images/img7_Dm.png">
+        </div>
+    </div>
 </div>
