This contains latest front-end. Currently not working - pcloud issue. Also profile page wasn't touched. The interface.js page was edited. Make sure to incorporate that. Thirdly, the main.js isn't working correctly

--- a/functions/views/aboutUs.hbs
+++ b/functions/views/aboutUs.hbs
@@ -31,7 +31,7 @@
     </div>
     <div class= "row">
         <div class="col-sm-4">
-            <p class="githubLink"><a href="https://github.com/JaraKucera">@Jara</a></p>
+            <p class="githubLink"><a href="https://github.com/JaraKucera">@JaraKucera</a></p>
         </div>
         <div class="col-sm-4">
             <img data-aos="fade-left" src="/images/jara.svg" alt = "member-3">
