--- a/functions/views/index.hbs
+++ b/functions/views/index.hbs
@@ -5,7 +5,7 @@
         <p class="landingText">Cloud.js</p> 
         <p class="landingSubText">Get Organised<br> With us</p> 
         <div class ="d-flex justify-content-center">
-        <button type="button" onclick="location.href='/users/register';" class=" btn btn-outline-light btn-lg mt-5 ">Sign Up</button> 
+        <button type="button" onclick="location.href='/users/register';" id="signingInBtn" class=" btn btn-outline-light btn-lg mt-5 ">Sign Up</button> 
         </div>
     </div>
     <div class="col align-items-end animated bounce desktopImg"><img class="landingIMG" src="/images/mainPC.png"></div>
@@ -102,7 +102,7 @@
     <p class="topBtn"> Get Started Today</p>
 </div>
 <div class="row justify-content-center">
-    <button type="button" onclick="location.href='/users/register';" class="signBtn">Sign Up</button>
+    <button type="button" onclick="location.href='/users/register';"id="signingInBtn" class="signBtn">Sign Up</button>
 
 </div>
 <div class="row justify-content-center">
@@ -136,7 +136,7 @@
     <p class="topBtn">Convinced Yet?</p>
 </div>
 <div class="row justify-content-center">
-    <button type="button" onclick="location.href='/users/register';" class="signBtn">Sign Up</button>
+    <button type="button" onclick="location.href='/users/register';" id="signingInBtn" class="signBtn">Sign Up</button>
 
 </div>
 <div class="row justify-content-center">
@@ -158,7 +158,7 @@
             <img src="/images/img5_Dm.png">
         </div>
         <div class="col-sm-4 googleIcon mt-4 mb-4">
-            <img src="/images/img6_Dm.png">
+            <img src="/images/img6_DM.png">
         </div>
         <div class="col-sm-4 dropboxIcon mt-4">
             <img src="/images/img7_Dm.png">
