--- a/functions/views/layouts/layout.handlebars
+++ b/functions/views/layouts/layout.handlebars
@@ -84,11 +84,11 @@
                         </li>
                         <li class="nav-item">
                             <!--- Link to SIGN UP page --->
-                            <a href="/users/register"> Sign Up</a>
+                            <a href="/users/register" id="signingInBtn"> Sign Up</a>
                         </li>
                         <li class="nav-item">
                             <!--- Link to GITHUB page --->
-                            <a href="#"> Pro.js</a>
+                            <a href="https://github.com/Team-ProJS"> Pro.js</a>
                         </li>
                         <li class="nav-item">
                             <!--- Link to ABOUT US page --->
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <div class="footer-copyright text-center py-3">© Copyright 2019:
-                <a href="#"> Pro.js</a>
+                <a href="https://github.com/Team-ProJS"> Pro.js</a>
             </div>
         </div>
 
