--- a/functions/views/register.hbs
+++ b/functions/views/register.hbs
@@ -1,10 +1,10 @@
 <!-- Register Section --->
-<div class="container-fluid formRegister ">
+<div class="container formRegister ">
     <form id="reg-form">
         <div class="form-group headingLabel text-center">
             <header> Register </header><br>
         </div>
-        <div class="greySec">
+        <div class="loginRegisteringSec">
             <!-- username -->
             <div class="form-group grp1 row justify-content-center">
                 <div class="col-lg-6 column">
@@ -37,18 +37,13 @@
             </div>
             <!-- button submit -->
             <div class="form-grou grp4 row justify-content-center">
-                <div class="col-lg-6"><button type="submit" class="btn btn-lg btn-outline-dark">Ready?... Go</button></div>
+                <div class="col-lg-6"><button type="submit" class="signBtn">Ready?... Go</button></div>
             </div>
             <!-- button submit end --->
         </div>
     </form>
 </div>
 <!--- End of Register section --->
-<!--- Information about secturity Section --->
-<div class="container text-center mt-5 mb-5">
-    <header>
-        Your Data... <br></header>
-    <h3>Safe with us</h3>
-</div>
+
 <!-- stylesheet for the register -->
 <link rel='stylesheet' href='/stylesheets/loginStylesheet.css'>
