--- a/functions/views/profile.hbs
+++ b/functions/views/profile.hbs
@@ -1,15 +1,8 @@
-<div class="container">
-          <br><br>
-          <header class="pt-5"> Profile Page</header>
-          <div style="height: 100px width: 100px">
-                    <canvas id="chartTransfer"></canvas>
-          </div>
-          <div style="height: 100px width: 100px">
-                    <canvas id="chartDownload"></canvas>
-          </div>
-          <p>Upload picture for profile</p>
-          <input type="file" id="profilePictureUpload"  accept="image/*" value ="upload">
-          <img id="profilepic" src="https://i.imgur.com/SaISvA8.png"/>
+<div class=" sidebarContent">
+
+</div>
+<div class="container"> 
+  
 </div>
 
 
@@ -19,12 +12,20 @@
 
 
 
+<!-- <div class="container">
+    <br><br>
+    <header class="pt-5"> Profile Page</header>
+<canvas id="chart" width="400" height="400"></canvas>
 
 
+<img id="profilepic" src="#" />
+
+
+</div>
+ --> 
 <script
   src="https://code.jquery.com/jquery-3.3.1.js"
   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
   crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.js"></script>
-<script src="/javascripts/fbInit.js"></script>
-<script src="/javascripts/profilePage.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.js"></script>
+  <script src="/javascripts/profilePage.js"></script>
