--- a/functions/views/interfacePage.hbs
+++ b/functions/views/interfacePage.hbs
@@ -1,4 +1,4 @@
-<div class="wrapper">
+  <div class="wrapper">
     <!-- Sidebar  -->
     <nav id="sidebar" class="pt-5 mt-5">
         <div class="sidebar-header d-flex justify-content-center ">
@@ -14,7 +14,7 @@
             </div>
             <div id="auth-status" style="display: inline; padding-left: 25px"></div>
             <!-- end of Google Section -->
-
+        
             <!-- dropbox section --> 
 
             <div class="dropbox text-center mt-1">
@@ -28,7 +28,7 @@
 
             <div class="pcloud text-center mt-1">
                 <p class="pb-0 mb-0 pt-3">pCloud</p>
-                <button type="button" class=" mt-0 cloudBtn" id="pcloudtokken" onclick="pCloudLogin();">Login</button>
+                <button type="button" class=" mt-0 cloudBtn" id="pcloudtokken">Login</button>
                 <button type="button" class="cloudBtn" onclick="pCloudLogout();">Logout</button>
             </div>
             <hr>
@@ -82,7 +82,7 @@
                 <button type="button" class=" mt-3 cloudBtnInPopup" id="sign-in-or-out-button">Google Login</button>
                 <!-- Dropbox Login -->
                 <button type="button" class=" mt-3 cloudBtnInPopup"><a href="" id="authlink">Dropbox Login</a></button>
-                <!-- pCloud Login -->
+                <!-- Onedrive Login -->
                 <button type="button" class=" mt-0 cloudBtnInPopup" id="pcloudtokken">Pcloud Login</button>
 
             </div>
@@ -116,7 +116,6 @@
                         <input type="file" class="custom-file-input" id="fileUploadTransfer" aria-describedby="inputGroupFileAddon01" value ="upload">
                         <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
                     </div>
-                    
                 </div>
                 <p class="subtext mt-3 small"> Let's quickly get started by uploading a file to your drive. Have something to post? <br> We'll do it for you</p>
             </div>
