--- a/functions/views/profile.hbs
+++ b/functions/views/profile.hbs
@@ -1,28 +1,129 @@
-<div class=" sidebarContent">
+<div class="row">
+    <div class="col-auto pr-0 mr-0">
+        <div class="sideContentSection justify-content-center">
+            <!-- Back button to interface page -->
+            <p class=" backToInterface pt-5" onclick="location.href='/users/interfacePage';" style="cursor: pointer;">Back</p>
+            <!-- profile picture section  && allowing to change profile picture.-->
+            <img id="profilepic" src="/images/profilePic.svg" class="rounded-circle" width="100%" data-toggle="modal"
+                data-target="#uploadModal" />
+            <button type="button" class="uploadBtn pt-4" data-toggle="modal" data-target="#uploadModal">Edit</button>
+        </div>
+    </div>
+    <div class="col pl-0 ml-0">
+        <div class="contentSection justify-content-center">
+            <!-- files and charts display section -->
+            <header class="pl-5" data-aos="fade-in" data-aos-delay="100" style="color:white">Profile</header>
+            <div class=" container displayBox">
+                <div class="row">
+                    <div class="col-sm-6">
 
+                        <!-- Word information goes here :: Table of contents -->
+                        <!-- ******************************************* THIS IS SAMPLE TABLE ********************************-->
+                        <div class="container pt-4 mt-2">
+                            <table class="table table-condensed">
+                                <h3 class="header"> Some Statistics..</h3>
+                                <thead class="pt-2">
+                                    <tr>
+                                        <th>Firstname</th>
+                                        <th>Lastname</th>
+                                        <th>Email</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>John</td>
+                                        <td>Doe</td>
+                                        <td>john@example.com</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Mary</td>
+                                        <td>Moe</td>
+                                        <td>mary@example.com</td>
+                                    </tr>
+                                    <tr>
+                                        <td>July</td>
+                                        <td>Dooley</td>
+                                        <td>july@example.com</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 pt-4 mt-2">
+                        <!-- Chart details go here :: Visuals-->
+                        <h3 class="header"> Chart Details..</h3>
+                        <h6 class="subtitle">Transfer Overview..</h6>
+                        <div style="height: 100px width: 100px" class="mt-2">
+                            <canvas id="chartTransfer"></canvas>
+                        </div>
+                        <h6 class="subtitle">Download Overview..</h6>
+                        <div style="height: 100px width: 100px" class="mt-2">
+                            <canvas id="chartDownload"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<div class="container"> 
-  
+
+
+<!--- modal popup for uploading profile picture -->
+
+<div class="modal" id="uploadModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <!--Modal Header -->
+            <div class="modal-header">
+                <h4 class="modal-title"> Upload A Picture</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <!-- Modal Body -->
+            <div class="modal-body justify-content-center">
+                <!-- displays photo and section allowing for uploading photo-->
+                <div class="row">
+                    <div class="col-6">
+                        <h5> Add Your Own Picture</h5>
+                        <small class="pt-0 mt-0 text-muted">Best to use square photos</small>
+                        <!-- TO DO: restriction of profile picture size ***********************************************************-->
+                        <input type="file" id="profilePictureUpload" accept="image/*" value="upload">
+                        <label for="file">Choose a File</label>
+                    </div>
+                    <div class="col-6">
+                        <img id="profilepic" src="/images/profilePic.svg" class="rounded-circle" width="100%" />
+                    </div>
+                </div>
+            </div>
+
+            <!--Modal footer -->
+            <div class="modal-footer">
+                <button type="button" class="btn btn-info" data-dismiss="modal">Let's Go</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--
+    <div class="container">
+          <br><br>
+          <header class="pt-5"> Profile Page</header>
+          <div style="height: 100px width: 100px">
+                    <canvas id="chartTransfer"></canvas>
+          </div>
+          <div style="height: 100px width: 100px">
+                    <canvas id="chartDownload"></canvas>
+          </div>
+          <p>Upload picture for profile</p>
+          <input type="file" id="profilePictureUpload"  accept="image/*" value ="upload">
+          <img id="profilepic" src="https://i.imgur.com/SaISvA8.png"/>
 </div>
 
+-->
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<!-- - - - - Scripts - - - - - --> 
 
-
-
-
-
-<!-- <div class="container">
-    <br><br>
-    <header class="pt-5"> Profile Page</header>
-<canvas id="chart" width="400" height="400"></canvas>
-
-
-<img id="profilepic" src="#" />
-
-
-</div>
- --> 
+  <link rel='stylesheet' href="/stylesheets/profilePage.css"/>
 <script
   src="https://code.jquery.com/jquery-3.3.1.js"
   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
