Google Drive Auth + Fetch

--- a/functions/views/interfacePage.hbs
+++ b/functions/views/interfacePage.hbs
@@ -15,6 +15,11 @@
                 <!-- Google Section -->
                 <p class="mb-0"> Google </p>
                 <button type="button" class=" mt-0 cloudBtn" id="sign-in-or-out-button">Login</button>
+
+
+                <button id="authorize-button" style="display: none;">Authorize</button>
+                <button id="signout-button" style="display: none;">Sign Out</button>
+                
             </div>
             <div id="auth-status" style="display: inline; padding-left: 25px"></div>
             <!-- end of Google Section -->
