Implemented OneDrive access token retrieval. Firestore not working on backend

--- a/functions/views/interfacePage.hbs
+++ b/functions/views/interfacePage.hbs
@@ -28,6 +28,14 @@
                 <!-- Here will be used to login and out of dropbox -->
 
             </div>
+
+            <!-- OneDrive section -->
+            <div class="onedrive text-center mt-1">
+                <p class="mb-0"> OneDrive</p>
+                <button type="button" class=" mt-0 cloudBtn"><a href="/auth/signin" id="oneDriveAuth">Add</a></button>
+
+            </div>
+
             <!-- pcloud section --> 
 
             <div class="pcloud text-center mt-1">
@@ -167,3 +175,6 @@
 <script type="text/javascript" src="/javascripts/interfacePage.js"></script> 
 <!-- pcloud script --> 
 <script type="text/javascript" src="/javascripts/pcloud.js"></script> 
+
+<!-- OneDrive script -->
+<script type="text/javascript" src="/javascripts/oneDriveAuth.js"></script>
