Fixed firestore problem, wrote APIs for managing OneDrive log-in and sign-out, checking if user has a token, deleting token if it has expired and more.

--- a/functions/views/interfacePage.hbs
+++ b/functions/views/interfacePage.hbs
@@ -32,7 +32,7 @@
             <!-- OneDrive section -->
             <div class="onedrive text-center mt-1">
                 <p class="mb-0"> OneDrive</p>
-                <button type="button" class=" mt-0 cloudBtn"><a href="/auth/signin" id="oneDriveAuth">Add</a></button>
+                <button type="button" class=" mt-0 cloudBtn" onclick="() => window.location.replace("/auth/signin")" id="oneDriveAuth">Sign-in</button>
 
             </div>
 
