Fixed some bugs with OneDrive sign in and sign out, added Sweet Alerts (swal) CDN + integrated new swal alerts with OneDrive

--- a/functions/views/layouts/layout.handlebars
+++ b/functions/views/layouts/layout.handlebars
@@ -131,6 +131,9 @@
     <script src="/javascripts/main.js"></script>
     <!-- Authentication Javascript file -->
     <script src="/javascripts/authFb.js"></script>
+    <!-- Sweet alert (Better dialog boxes) -->
+    <script src = "https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
+
     <!----------------------  END - LINKS ---------------------------------->
 </body>
 
