Fixed placement of OneDrive log-in/log-out button

--- a/functions/views/interfacePage.hbs
+++ b/functions/views/interfacePage.hbs
@@ -31,7 +31,7 @@
 
             <!-- OneDrive section -->
             <div class="onedrive text-center mt-1">
-                <p class="mb-0"> OneDrive</p>
+                <p class="pb-0 mb-0 pt-3"> OneDrive</p>
                 <button type="button" class=" mt-0 cloudBtn" onclick="() => window.location.replace("/auth/signin")" id="oneDriveAuth">Sign-in</button>
 
             </div>
